<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentHome">

    <!-- HOME -->
    <fragment
        android:id="@+id/fragmentHome"
        android:name="com.jsdisco.lilhelper.ui.home.HomeFragment"
        android:label="@string/bottomnav_home"
        tools:layout="@layout/fragment_home" />

    <!-- SETTINGS -->
    <fragment
        android:id="@+id/fragmentSettings"
        android:name="com.jsdisco.lilhelper.ui.settings.SettingsFragment"
        android:label="@string/bottomnav_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- NOTES -->
    <navigation
        android:id="@+id/nav_nested_notes"
        app:startDestination="@id/fragmentNotes">
        <fragment
            android:id="@+id/fragmentNotes"
            android:name="com.jsdisco.lilhelper.ui.notes.NotesFragment"
            android:label="@string/bottomnav_notes"
            tools:layout="@layout/fragment_notes">
            <action
                android:id="@+id/action_fragmentNotes_to_fragmentAddNote"
                app:destination="@id/fragmentAddNote" />
            <action
                android:id="@+id/action_fragmentNotes_to_fragmentEditNote"
                app:destination="@id/fragmentEditNote" />
        </fragment>
        <fragment
            android:id="@+id/fragmentAddNote"
            android:name="com.jsdisco.lilhelper.ui.notes.AddNoteFragment"
            android:label="@string/actionbar_add_note"
            tools:layout="@layout/fragment_add_note" />
        <fragment
            android:id="@+id/fragmentEditNote"
            android:name="com.jsdisco.lilhelper.ui.notes.EditNoteFragment"
            android:label="@string/actionbar_edit_note"
            tools:layout="@layout/fragment_edit_note">
            <argument
                android:name="noteId"
                app:argType="long" />
        </fragment>
    </navigation>


    <!-- CHECKLISTS -->


    <!-- RECIPES -->
    <navigation
        android:id="@+id/nav_nested_recipes"
        app:startDestination="@id/fragmentRecipes">
        <fragment
            android:id="@+id/fragmentRecipes"
            android:name="com.jsdisco.lilhelper.ui.recipes.RecipesFragment"
            android:label="@string/bottomnav_recipes"
            tools:layout="@layout/fragment_recipes">
            <action
                android:id="@+id/action_fragmentRecipes_to_fragmentRecipeDetails"
                app:destination="@id/fragmentRecipeDetails" />
        </fragment>
        <fragment
            android:id="@+id/fragmentRecipeDetails"
            android:name="com.jsdisco.lilhelper.ui.recipes.RecipeDetailsFragment"
            android:label="@string/actionbar_recipe_details"
            tools:layout="@layout/fragment_recipe_details">
            <argument
                android:name="recipeTitle"
                app:argType="string" />
            <argument
                android:name="recipeIndex"
                app:argType="integer" />
        </fragment>
        <action
            android:id="@+id/action_global_nav_nested_notes"
            app:destination="@id/nav_nested_notes" />
    </navigation>


</navigation>